--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 					<a target="_blank" href="https://github.com/Harrisj22412
 ">Github: Harrisj22412</a>
-					<p> Email: Harrisj22412@hocking.edu </p>
+					<a target="_blank" > Email: Harrisj22412@hocking.edu</a>
 					<br>
 					
 				</div>
